ブラウザに外部キー連携のデータも表示できるように修正（商品名、顧客名、店舗名）

--- a/src/main/resources/templates/saleslist.html
+++ b/src/main/resources/templates/saleslist.html
@@ -28,17 +28,16 @@
 				<td th:text="${sales.salesNumber}"></td>
 				<td th:text="${sales.targetDate}"></td>
 				<td th:text="${sales.product.productId}"></td>
-				<td th:text="${sales.productName}"></td>
+				<td th:text="${sales.product.productName}"></td>
 				<td th:text="${sales.quantity}"></td>
 				<td th:text="${sales.salesPrice}"></td>
 				<td th:text="${sales.customer.customerId}"></td>
-				<td th:text="${sales.customerName}"></td>
+				<td th:text="${sales.customer.customerName}"></td>
 				<td th:text="${sales.store.storeId}"></td>
-				<td th:text="${sales.storeName}"></td>
+				<td th:text="${sales.store.storeName}"></td>
 			</tr>
 		</tbody>
 	</table>
 </body>
 
 </html>
-
